--- a/src/comps/pages/first-page/first-page.css
+++ b/src/comps/pages/first-page/first-page.css
@@ -2,6 +2,7 @@
 	position: relative;
 	height: 100%;
 	background: url(./img/bg.jpg) no-repeat center;
+	background-size: cover;
 }
 
 .first_content{
